<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPasienActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_id_pasien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:hint="ID Pasien"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_nama_pasien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:hint="Nama Lengkap Anda"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_id_pasien" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_email_pasien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:hint="Email"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_nama_pasien" />

    <TextView
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        android:id="@+id/txt_tglLahir_pasien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="12dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:hint="Tanggal Lahir"
        android:textSize="18sp"
        android:textColorHint="#757575"
        android:includeFontPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email_pasien"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/tv_tglLahir_user"
        style="@style/ThemeOverlay.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:inputType="date"
        android:minHeight="48dp"
        android:text="Pilih Tanggal"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email_pasien" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_noTelp_pasien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:hint="No Telp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_tglLahir_pasien" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_pasien"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_noTelp_pasien"
        android:text="Simpan Data"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>